background shifts to keep fox in view in responsive. Fixed hamburger menu.

--- a/mozilla_style.css
+++ b/mozilla_style.css
@@ -1,14 +1,15 @@
 .navbar-mozilla {
     background-color: red;
-    color: white;
+    /*color: white;*/
     vertical-align: bottom;
     padding: 2px;
     margin-bottom: 0px;
 }
-#mozilla_ul a,p {
-    color: white;
+.mozilla_ul  a{
+    color: white !important;
     text-transform: uppercase;
 }
+
 .navbar-header {
     display: inline-block;
     float: right;
@@ -28,6 +29,7 @@
     font-weight: bolder;
     color: white;
     padding: 0;
+    margin: 0;
 }
 .carousel-inner img {
     width: 100%;
@@ -51,30 +53,120 @@
     width: 70%;
 
 }
-
+p {
+    /*color: gray;*/
+    /*text-transform: capitalize;*/
+    line-height: 1.6em;
+    font-size: 1.2em;
+}
+.container-fluid {
+    padding: 0;
+}
 .left-k {
     color: red;
     font-weight: bolder;
-    padding: 5px;
     list-style-type: none;
     text-align: center;
-
+    margin: 0px;
+    padding: 15px;
 }
 .right-k {
     color: white;
     background-color: red;
     font-weight: bolder;
-    padding: 5px;
     list-style-type: none;
     text-align: center;
+    margin: 0px;
+    padding: 15px;
 
 }
-p {
-    color: gray;
-    text-transform: capitalize;
-    line-height: 1.6em;
-    font-size: 1.2em;
-}
+
 * {
     font-family: 'Signika', sans-serif;
+}
+/*This section is for the purple background*/
+.browse {
+    position: relative;
+    color: white;
+    font-weight: bold;
+    background-color: #092d6c;
+    overflow: hidden;
+}
+.background{
+    position: relative;
+    top:90px;
+    left:0px;
+    height:900px;
+    width:100%;
+    overflow:hidden;
+    padding-top: 100px;
+    background-image: url("mozilla_purple.png");
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+.background > img{
+    max-height: 100%;
+
+}
+.foxy {
+    text-align: center;
+    font-size: 1.6em;
+    position: absolute;
+    top: 0px;
+    padding: 5% 15% 5% 15%;
+    width: 100%;
+}
+.foxy > h2 {
+    text-align: center;
+    font-size: 2.2em;
+}
+
+@media (max-width: 760px) {
+
+    .background{
+        background-image: url("mozilla_purple.png");
+        background-position-x: 65%;
+        background-position-y: center;
+        margin-bottom: -95px;
+
+    }
+    .foxy > img {
+        width: 86px;
+    }
+    .foxy > p {
+        font-size: 1em;
+    }
+    .foxy > h2 {
+        text-align: center;
+        font-size: 1.8em;
+    }
+}
+.opaque {
+    background-color: white;
+}
+.content {
+    list-style: none;
+    display: inline-block;
+    text-align: center;
+    margin-top: 20px;
+}
+h3 + p {
+    padding-left: 30px;
+    padding-right: 30px;
+    color: black;
+    font-weight: lighter;
+}
+a > h3 {
+    padding-left: 30px;
+    padding-right: 30px;
+    color: black;
+    font-weight: bolder;
+}
+.white {
+    color: white;
+    text-decoration: underline;
+    font-size: .8em;
+    line-height: 2em;
 }
